[package]
name = "warg-client"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-api = { workspace = true }
warg-transparency = { workspace = true }

thiserror = "1.0.43"
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive", "env"] }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.102"
tokio-util = "0.7.8"
tempfile = "3.6.0"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
futures-util = "0.3.28"
async-trait = "0.1.73"
bytes = "1.4.0"
url = "2.4.0"
libc = "0.2.147"
tracing = "0.1.37"
itertools = "0.11.0"
dirs = "5.0.1"
once_cell = "1.18.0"
walkdir = "2.3.3"
normpath = "1.1.1"
pathdiff = "0.2.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = ["Win32_Foundation", "Win32_Storage_FileSystem"]
